--- a/contact.html
+++ b/contact.html
@@ -10,6 +10,8 @@
     <link rel="stylesheet" href="css/main.css">
     <!--Fontawsome-->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
+	<!--icon-->
+	<link rel="icon" href="./img/phone.png">
 
 </head>
 <body>
