--- a/about.html
+++ b/about.html
@@ -10,7 +10,8 @@
     <link rel="stylesheet" href="css/main.css">
     <!--Fontawsome-->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
-
+    <!--icon swimmer-->
+    <link rel="icon" href="./img/swim.png">
 </head>
 <body>
     <header>
