--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     </header>
      
     <main id="home"> 
-        <h1 class="lg-heading">Anas<span class="text-secondary"> Alaya</span></h1>
+        <h1 class="lg-heading">Jason<span class="text-secondary"> Alaya</span></h1>
         <h2 class="sm-heading">->Computer Science Student<br> -> App Developer <br>-> Software Constructor(this);</h2>
         <div class="icons">
             <a href="#!" style="cursor: not-allowed">
