add Resume + codesheet

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
             </div>
             <ul class="menu-nav">
                 <li class="nav-item current"><a href="/" class="nav-link">Home</a></li>
+                <li class="nav-item"><a href="./img/Alaya_Jason.pdf" class="nav-link">Resume</a></li>
                 <li class="nav-item"><a href="about.html" class="nav-link">About Me</a></li>
                 <li class="nav-item"><a href="work.html" class="nav-link">My Work</a></li>
                 <li class="nav-item"><a href="contact.html" class="nav-link">How To Reach Me</a></li>
@@ -39,9 +40,9 @@
         <h1 class="lg-heading">Jason<span class="text-secondary"> Alaya</span></h1>
         <h2 class="sm-heading">->Computer Science Student<br> -> App Developer <br>-> Software Constructor(this);</h2>
         <div class="icons">
-            <a href="#!" style="cursor: not-allowed">
+           <!-- <a href="#!" style="cursor: not-allowed">
                 <i class="fab fa-twitter fa-2x"></i>
-            </a>
+            </a> -->
             <a href="https://www.quora.com/profile/Jason-Alaya">
                     <i class="fab fa-quora fa-2x"></i>
                 </a>
