--- a/work.html
+++ b/work.html
@@ -29,10 +29,10 @@
             </div>
             <ul class="menu-nav">
                 <li class="nav-item"><a href="index.html" class="nav-link">Home</a></li>
+                <li class="nav-item"><a href="./img/Alaya_Jason.pdf" class="nav-link">Resume</a></li>
                 <li class="nav-item"><a href="about.html" class="nav-link">About Me</a></li>
                 <li class="nav-item current"><a href="work.html" class="nav-link">My Work</a></li>
                 <li class="nav-item"><a href="contact.html" class="nav-link">How To Reach Me</a></li>
-
             </ul>
         </nav>
     </header>
@@ -163,6 +163,17 @@
                             <i class="fab fa-google"></i> Research Paper
                         </a>
                 </div>
+
+                    <div class="card">
+                        <a href="./CodeSheet.html">
+                         <img class="card-img-top" src="./img/codesheet.PNG" alt="Card image cap">
+                        </a>
+                        <div class="card-body">
+                        <h5 class="card-title">CodeSheet</h5>
+                        <p class="card-text">Online webpage to write and test code in html css and javascript</p>
+
+                        </div>
+                    </div>
 
 
                     <div class="card">
