--- a/about.html
+++ b/about.html
@@ -27,7 +27,6 @@
             </div>
             <ul class="menu-nav">
                 <li class="nav-item"><a href="index.html" class="nav-link">Home</a></li>
-                <li class="nav-item"><a href="./img/Alaya_Jason.pdf" class="nav-link">Resume</a></li>
                 <li class="nav-item current"><a href="about.html" class="nav-link">About Me</a></li>
                 <li class="nav-item"><a href="work.html" class="nav-link">My Work</a></li>
                 <li class="nav-item"><a href="contact.html" class="nav-link">How To Reach Me</a></li>
@@ -48,6 +47,7 @@
                 <p>I'm a junior at the <a  id="uci" href="https://uci.edu/" target="_blanck">University of California Irvine</a>, studying in the college of information and computer sciences,
                     specializing in Intelligent Systems, and minoring in Statistics. I like to convey my knowledge to others, so I have 
                     been tutoring math at<a href="http://www.goldenwestcollege.edu/"> Golden West College </a> since 2016. Expecting to graduate in June 2020.
+                    <a href="./img/Alaya_Jason.pdf" class="nav-link">Finde my Resume here</a>
                 </p>
          </div>
          <div class="job job-1">
