--- a/index.html
+++ b/index.html
@@ -27,7 +27,6 @@
             </div>
             <ul class="menu-nav">
                 <li class="nav-item current"><a href="/" class="nav-link">Home</a></li>
-                <li class="nav-item"><a href="./img/Alaya_Jason.pdf" class="nav-link">Resume</a></li>
                 <li class="nav-item"><a href="about.html" class="nav-link">About Me</a></li>
                 <li class="nav-item"><a href="work.html" class="nav-link">My Work</a></li>
                 <li class="nav-item"><a href="contact.html" class="nav-link">How To Reach Me</a></li>
@@ -38,7 +37,7 @@
      
     <main id="home"> 
         <h1 class="lg-heading">Jason<span class="text-secondary"> Alaya</span></h1>
-        <h2 class="sm-heading">->Computer Science Student<br> -> App Developer <br>-> Software Constructor(this);</h2>
+        <h2 class="sm-heading">->Computer Science Student<br> -> App Developer</h2>
         <div class="icons">
            <!-- <a href="#!" style="cursor: not-allowed">
                 <i class="fab fa-twitter fa-2x"></i>
