--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
            <!-- <a href="#!" style="cursor: not-allowed">
                 <i class="fab fa-twitter fa-2x"></i>
             </a> -->
-            <a href="https://www.quora.com/profile/Jason-Alaya">
+            <a href="https://www.quora.com">
                     <i class="fab fa-quora fa-2x"></i>
                 </a>
                 <a href="https://www.linkedin.com">
