--- a/about.html
+++ b/about.html
@@ -44,36 +44,28 @@
     
          <div class="bio">
              <h3 class="text-secondary">BIO</h3>
-                <p>I'm a junior at the <a  id="uci" href="https://uci.edu/" target="_blanck">University of California Irvine</a>, studying in the college of information and computer sciences,
-                    specializing in Intelligent Systems, and minoring in Statistics. I like to convey my knowledge to others, so I have 
-                    been tutoring math at<a href="http://www.goldenwestcollege.edu/"> Golden West College </a> since 2016. Expecting to graduate in June 2020.
-                    <a href="./img/Alaya_Jason.pdf" class="nav-link">Finde my Resume here</a>
+                <p>I'm a Graduate student at the <a  id="uci" href="https://uci.edu/" target="_blanck">University of California Irvine</a>, Donald Bren school of information and computer sciences.
+                    <a href="./img/Alaya_Jason.pdf" class="nav-link">Resume</a>
                 </p>
          </div>
          <div class="job job-1">
-             <h3>web Developer</h3>
-             <h6>Full Stack Developer</h6>
-             <p>Making websites is an interesting and fun thing to do. In fact, I made this simple responsive website using some of the common technologies 
-                 -> HTML, SASS, and JavaScript. having a website has become a requirement
-                  for most businesses to improve their sales and to connect with their local and international customers. I can help you make a practical website
-                for your personal or professional use, just reach out to me.</p>
+             <h3>Graduate Teaching Assistant</h3>
+             <h6>UC Irvine</h6>
+             <p>I'm currently a TA helping faculty and students during remote learning</p>
          </div>
 
          <div class="job job-2">
-                <h3>Software Developer</h3>
-                <h6>Software Design</h6>
-                <p>Learning and developing best practises to build and make software.
-                        My coding experience include the following languages:
-                        C\C++, Java, Python, JavaScript (JQuery, BootStrap, Node.js, and React), Racket.
-                        You can find most of my code on <a href="https://github.com/pistachio05">Github</a>
+                <h3>Software Engineer</h3>
+                <h6>BackEnd</h6>
+                <p>Working in industry orchestrating microservices. I have worked in services written in Node.js, ASP.Net, Python running in cloud 
+                   I like simplicity, Thus, I like GoLang!
                 </p>
             </div>
 
             <div class="job job-3">
-                    <h3>Machine Learning</h3>
-                    <h6>supervised unsupervised reinforcement</h6>
-                    <p>Currently, working and expanding my knowledge in this area ,and planning to
-                         work on more ML projects in graduate school</p>
+                    <h3>Working Out</h3>
+                    <h6>swimming, hiking, or biking</h6>
+                    <p>my favorite thing to do after a long day of staring at the screen!</p>
                 </div>
     </div> 
     </main>
