--- a/about.html
+++ b/about.html
@@ -57,15 +57,15 @@
          <div class="job job-2">
                 <h3>Software Engineer</h3>
                 <h6>BackEnd</h6>
-                <p>Working in industry orchestrating microservices. I have worked in services written in Node.js, ASP.Net, Python running in cloud 
-                   I like simplicity, Thus, I like GoLang!
+                <p>Working in the industry orchestrating microservices. I have worked in services written in Node.js, ASP.Net, Python, and integrated with different cloud resources.
+             </p><p>I like simplicity, Thus, I like GoLang!
                 </p>
             </div>
 
             <div class="job job-3">
                     <h3>Working Out</h3>
                     <h6>swimming, hiking, or biking</h6>
-                    <p>my favorite thing to do after a long day of staring at the screen!</p>
+                    <p>My favorite thing to do after a long day of staring at the screen!</p>
                 </div>
     </div> 
     </main>
