--- a/about.html
+++ b/about.html
@@ -45,7 +45,7 @@
          <div class="bio">
              <h3 class="text-secondary">BIO</h3>
                 <p>I'm a Graduate student at the <a  id="uci" href="https://uci.edu/" target="_blanck">University of California Irvine</a>, Donald Bren school of information and computer sciences.
-                    <a href="./img/Alaya_Jason.pdf" class="nav-link">Resume</a>
+                    <a href="./img/resume.pdf" class="nav-link">Resume</a>
                 </p>
          </div>
          <div class="job job-1">
